--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
 
     <string name="menu_list_reviews">Escreva uma opinião</string>
     <string name="menu_list_reviews_label">Escreva uma opinião</string>
+
+    <string name="item_list_edit">Editar</string>
+    <string name="item_list_delete">Apagar</string>
+
 </resources>
