--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,9 @@
     <string name="form_review_opiniao">Opinião</string>
     <string name="hint_name">Nome do produto/filme/coisa</string>
     <string name="hint_opiniao">Escreva aqui a sua opinião</string>
-    <string name="menu_list_reviews_label">Lista Opinões</string>
+    <string name="menu_list_reviews_label">Lista Opinião</string>
     <string name="item_list_edit">Modificar</string>
     <string name="item_list_delete">Apagar</string>
+    <string name="new_item">Novo Item</string>
+    <string name="list_item">Listar Itens</string>
 </resources>
